[CDAP-8419] Modifies Resource Center entities in resource center modal to be responsive - Fixes styling for cask market + media query for add entity modal - Fixes spacing between and width of resource center entities

--- a/cdap-ui/app/cdap/components/ResourceCenter/ResourceCenter.scss
+++ b/cdap-ui/app/cdap/components/ResourceCenter/ResourceCenter.scss
@@ -17,5 +17,6 @@
 .cask-resource-center {
   height: 100%;
   padding: 10px;
-  overflow: auto;
+  overflow-y: auto;
+  max-height: 75vh;
 }
